# hallucination-leaderboard

./: .gitignore  CITATION.cff  GUIDE.md  MANIFEST.in  README.md  leaderboard_plot.ipynb  main.py  pyproject.toml  requirements-action.txt  requirements-gpu.txt  requirements.txt  setup.py  test_main.py  test_script.py  update_readme.py
.github/workflows/: update-readme.yml
datasets/: datasets.md  test_articles.csv
datasets/test_analytics/: judgements.jsonl  stats.json  stats.jsonl  summaries.jsonl
huggingface_scripts/: huggingface_script.py
img/: leaderboard_plot.ipynb  leaderboard_plot.py
migration/: README.md
migration/old_summarie_to_2025_July_format/: anthropic_list_models.py  company_and_model_name_mapping.py  convert_HF_summaries_to_2025_July_summaries_jsonl.ipynb  find_missing_summaries.ipynb  openai_list_models.py
output/: stats_all_LLMs.json
output/DeepSeek-V3.2-Exp/: judgments.jsonl
output/Olmo-3-32B-Think/: judgments.jsonl  stats.jsonl  summaries.jsonl
output/qwen3-30b-a3b-thinking-2507/: judgments.jsonl  summaries.jsonl
output/qwen3-next-80b-a3b-thinking/: summaries.jsonl
public_output/: INFO.md
src/: HDM_2.py  HHEM_2_x.py  Logger.py  __init__.py  analytics.py  config.py  constants.py  data_model.py  exceptions.py  json_utils.py  main.py  test_script.py
src/HHEM/: HHEM.py  HHEM_2_x.py
src/LLMs/: AI21.py  AbstractLLM.py  Alibaba.py  AllenAI.py  Anthropic.py  Cohere.py  DeepSeekAI.py  Fanar.py  Google.py  IBM.py  Meta.py  Microsoft.py  MistralAI.py  MoonshotAI.py  OpenAI.py  Rednote.py  Zer01AI.py  _01ai.py  __example_company.py  __init__.py  ai21labs.py  allenai.py  amazon.py  antgroup_mi.py  anthropic.py  apple.py  arcee_ai.py  baidu.py  cohere.py  databricks.py  deepseek_ai.py  example_company.py  google.py  ibm_granite.py  inceptionlabs.py  intel.py  internlm.py  meta_llama.py  microsoft.py  minimaxai.py  (+18 more)
src/analytics/: metrics.py  stats.py
src/data_struct/: config_model.py  data_model.py
src/datasets/: test_article.csv
src/logging/: Logger.py
src/metrics/: HHEMMetrics.py  Metrics.py  metrics.py  stats.py
src/pipeline/: __init__.py  aggregate.py  get_judgements.py  get_results.py  get_summaries.py  judge.py  summarize.py
src/scripts/: combine_hhem_scores.py  get_hhem_scores.py  get_judgements.py  get_results.py  get_summaries.py
src/tests/: AbstractTest.py  TestAnalytics.py  TestLLM.py  __init__.py
src/utils/: build_utils.py  (+1 more)
(+1005 files in other folders)
