[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hhem-leaderboard"
version = "0.1.0"
description = "HHEM Leaderboard Backend - A system for evaluating LLM hallucination using the Hughes Hallucination Evaluation Metric"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Forrest Bao", email = "forrest.bao@gmail.com"},
    {name = "Minseok"},
    {name = "Miaoran Li"},
    {name = "Ahmed Awadallah"}
]
maintainers = [
    {name = "Forrest Bao", email = "forrest.bao@gmail.com"},
    {name = "Ahmed Awadallah"}
]
keywords = ["llm", "hallucination", "evaluation", "metrics", "nlp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "pydantic>=1.8.0",
    "tqdm>=4.60.0",
    "python-dotenv>=0.19.0",
    "torch>=1.9.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "mistralai>=0.0.10",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
hhem-leaderboard = "src.main:cli_main"

[project.urls]
Homepage = "https://github.com/forrest/github_hallucination_leaderboard"
Repository = "https://github.com/forrest/github_hallucination_leaderboard"
Documentation = "https://github.com/forrest/github_hallucination_leaderboard#readme"
Issues = "https://github.com/forrest/github_hallucination_leaderboard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 